--- a/components/global/exam-details/exam-details.css
+++ b/components/global/exam-details/exam-details.css
@@ -249,7 +249,7 @@
 }
 
 .single-exam-description {
-    color: #4B5563;
+    color: #1f2937;
     margin-bottom: 24px;
     line-height: 1.6;
     font-size: 1rem;
